# FAST-OAD-CS23-HE

./: .gitignore  AUTHORS.rst  README.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: tests.yml
FAST-OAD_notebooks/cirrus_sr22/: 01_tutorial.ipynb  test_sizing_cirrus_sréé_mio.py
FAST-OAD_notebooks/cirrus_sr22/data/: full_sizing_fuel.yml
FAST-OAD_notebooks/cirrus_sr22/utils/: curve_reading.py  filter_residuals.py  rename_tool.py  write_outputs.py
FAST-OAD_notebooks/fast-oad-core/01_Quick_start/: 1try_Fast_OAD.py  beam_problem.ipynb
FAST-OAD_notebooks/fast-oad-core/02_From_Python_to_FAST-OAD/: 01_summary.ipynb  03_scipy.ipynb  04_OpenMDAO.ipynb  05_FAST-OAD.ipynb  2try-Fast_OAD.py
FAST-OAD_notebooks/fast-oad-cs23-he/01_Mission_with_HE_power_train/: simple_example.ipynb
FAST-OAD_notebooks/fast-oad-cs23/tutorial/: 01_tutorial.ipynb  02_postprocessing.ipynb  03_analysis.ipynb  try_03_cs23.py  try_fast_oaad_cs23.py  try_plot_cs23.py
FAST-OAD_notebooks/performances_cirrrus_sr22/data/: full_sizing_fuel_mio.yml  full_sizing_out.xml
docs/: citation.rst  conf.py  index.rst  pt_builder.rst  refs.bib  requirements.txt
docs/_n2/: n2_performance_af_pmsm.html  n2_performance_pemfc_analytical.html  n2_sizing_h2_fuel_system.html  n2_sizing_sm_pmsm.html
docs/_static/n2/: n2_sizing_gh2_tank.html
docs/_visual/: single_ice.html  tutte_demo.html
docs/documentation/models/: default_submodel.rst  index.rst  rta_integration.rst
docs/documentation/powertrain_builder/: constraints.rst  index.rst  pt_file.rst  pt_visual.rst  templates.rst
docs/n2/: n2_performance_gh2_tank.html  n2_performance_h2_fuel_system.html  n2_performance_pemfc.html  n2_performance_pemfc_analytical.html  n2_performance_pemfc_empirical.html  n2_performance_pemfc_simple.html  n2_performance_sm_pmsm.html  n2_pipistrel_electro_lcc.html  n2_sizing_af_pmsm.html  n2_sizing_gh2_tank.html  n2_sizing_h2_fuel_system.html  n2_sizing_pemfc.html  n2_sizing_sm_pmsm.html  n2_tbm_900_lcc.html
docs/visual/: single_ice.html
fast-oad-cs25/FAST-OAD_notebooks/fast-oad-cs23-he/: .gitignore
fast-oad-cs25/FAST-OAD_notebooks/rta/: 01_tutorial.ipynb  02_postprocessing.ipynb
integration_tests/: try_test_cirrus_sr22.py
integration_tests/ATR_42/: ATR42_plot.py  constant.py  test_atr_42.py  test_rta_baseline_integration.py
integration_tests/ATR_42/data/: atr42_inputs.xml  atr42_retrofit.yml  atr42_turboshaft.yml  fuel_propulsion_assembly.yml  hybrid_atr_inputs_full_sizing.xml  hybrid_atr_inputs_retrofit.xml  inputs_parallel_hybrid_retrofit.xml  inputs_parallel_retrofit.xml  oad_process.yml  oad_process_float.yml  oad_process_float_performance_from_he.yml  oad_process_parallel_full_sizing.yml  oad_process_parallel_fullsizing.yml  oad_process_parallel_retrofit.yml  oad_process_parallel_underbelly_full_sizing.yml  parallel_hybrid_assembly.yml  parallel_hybrid_assembly_underbelly.yml  problem_inputs.xml  problem_inputs_new.xml  problem_outputs.xml  resized_hybrid_inputs.xml  resized_underbelly_hybrid_inputs.xml  set_up_data.xml  set_up_data_full_sizing.xml  sizing_mission_R.yml
integration_tests/ATR_42_new/: ATR42_plot.py  mission_atr42.ipynb  test_atr_42.py  test_rta_baseline_integration.py  test_rta_baseline_integration_parallel.py
integration_tests/ATR_42_new/data/: ATR42_assembly_hybridPT.yml  ATR42_assembly_hybridPT_otherpositiongearbox.yml  PT_parallel.yml  PT_series.yml  atr42_inputs_turboshaft.xml  atr42_retrofit.yml  atr42_retrofit_data.xml  atr42_retrofit_parallel.yml  atr42_turboshaft.yml  inpur_retrofit_series_new.xml  inputs_ATR42_hybrid_series.xml  inputs_parallel_fullsizing.xml  inputs_parallel_hybrid_fullsizing.xml  inputs_parallel_hybrid_retrofit.xml  inputs_parallel_retrofit.xml  inputs_retrofit_parallel_fromturboshaftthelastone.xml  inputs_series.xml  inputs_turboshaft.xml  oad_process_float_performance_from_he_series.yml  oad_process_parallel_fullsizing.yml  oad_process_parallel_retrofit.yml  oad_process_series.yml  oad_process_turboshaft.yml  problem_outputs_median.xml  pt_parallel.yml  retrofit_correct_powertrain.xml
integration_tests/ATR_72/: compute_cl_vec.py  test_atr_72.py  test_rta_72.py  test_rta_baseline_integration.py
integration_tests/ATR_72/data/: flight_points.csv  (+8 more)
integration_tests/DHC6_twin_otter/: mission_dhc6_twin_otter.ipynb  test_sizing_dhc6_twin_otter.py
integration_tests/cessna_208/: cessna_data_viz.ipynb  post_processing.py  test_sizing_cessna_208.py
integration_tests/cirrus_sr22/: cirrus_data_viz.ipynb  compute_cl_ref.py  test_post_process_lca_results.py  test_sizing_RTA.py  test_sizing_cirrus_sr22.py  test_sizing_hybrid_cirrus_better_cells.py  test_sizing_sr22_lca.py  uqpce.py  uqpce_reference_case.py  uqpce_sr22.py
integration_tests/daher_tbm900/: mission_tbm900.ipynb  test_sizing_daher_tbm900.py
integration_tests/dhc_6_twin_otter/: __init__.py  mission_dhc6_twin_otter.ipynb  test_sizing_dhc6_twin_otter.py
integration_tests/oad_process/: test_oad_process.py
integration_tests/pipistrel/: pipistrel_club_data_viz.ipynb  pipistrel_detailed_mission.ipynb  pipistrel_different_cells_viz.ipynb  pipistrel_lower_soc_start_viz.ipynb  pipistrel_perf_comparison.ipynb  pytest.ini  test_lca_pipistrel.py  test_lca_pipistrel_club.py  test_lca_pipistrel_different_cell.py  test_lca_pipistrel_plus.py  test_post_processing_lca_pipistrel_club.py  test_post_processing_pipistrel_lca.py  test_post_processing_pipistrel_plus.py  test_sizing_pipistrel.py
integration_tests/quest_kodiak100/: comparaison_kodiaks.ipynb  mission_kodiak100.ipynb  post_processing.py  test_lca_kodiak100.py  test_sizing_quest_kodiak100.py  test_uq_quest_kodiak100.py
src/fastga_he/: api.py  exceptions.py
tests/: testing_utilities.py
utils/: curve_fitting_openmdao.py  curve_reading.py  filter_residuals.py  fluid_characteristics.py  format_to_array.py  rename_tool.py  write_outputs.py
(+2709 files in other folders)
