[tool.black]
line-length = 100

[tool.poetry]
name = "FAST-OAD-CS23-HE"
version = "0.0.1"
description = "Package containing the files for the thesis : Optimization of an aircraft design problem for hybrid-electric configurations under manufacturing and certification constraints"
readme = "README.md"
authors = [
    "Florent LUTZ <Florent.LUTZ2@isae-supaero.fr>"
]
keywords = [
    "aircraft",
    "design",
    "multi-disciplinary"
]
license = "GPL-3.0-only"
homepage = "https://github.com/florentLutz/template-for-fast-contributor"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Physics"
]
packages = [
    { include = "fastga_he", from = "src" },
]

[tool.poetry.dependencies]
# IMPORTANT: when modifying this list, docs/requirements.txt must be updated for
# ReadTheDocs to be able to compile the documentation.
# A pre-commit hook has been added to do this task. As a result, any modification
# of poetry.lock file will modify docs/requirements.txt and make
# the commit fail because "files were modified by this hook". In that case,
# doing again the commit including changes in docs/requirements.txt will succeed.
python = "^3.8, <3.10"
fast-oad-cs23 = { git = "https://github.com/supaero-aircraft-design/FAST-GA.git", branch = "main" }
fast-oad-core = "^1.6.0"
stdatm = "^0.3.0"
pybamm = "*"
casadi = "3.5.5"
networkx = "*"
pyvis = "*"
Pillow = "9.3"
kaleido = "0.2.1"
click = "8.0.4"
debugpy = "1.5.0"

[tool.poetry.group.dev.dependencies]
pyvplm = { git = "https://github.com/SizingLab/pyvplm.git", branch = "master" }
wheel = "*"
tabula = "*"

[tool.poetry.group.test.dependencies]
pytest = "^5.2"
pytest-cov = "*"
nbval = "*"

[tool.poetry.group.doc.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
sphinxcontrib-bibtex = "*"

[tool.poetry.group.lint.dependencies]
pre-commit = "*"
black = { version = "21.9b0", extras = ["jupyter"], allow-prereleases = true } # if version is changed, please change it also in .pre-commit-config.yaml file.
pylint = "*"

[tool.poetry.plugins."fastoad.plugins"]
"cs23_he_plugin" = "fastga_he"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
